[gd_scene load_steps=13 format=3 uid="uid://cn7kvuvr72qyy"]

[ext_resource type="Texture2D" uid="uid://b0hev8oqv4b3v" path="res://level_designer/widgets/draggable_button/normal.png" id="1_vae0d"]
[ext_resource type="Script" uid="uid://d3dmcw2t2cd25" path="res://level_designer/widgets/draggable_button/widget_button.gd" id="1_wk6ee"]
[ext_resource type="Script" uid="uid://c0gisqkikjjsm" path="res://level_designer/widgets/draggable_button/button_costume.gd" id="2_0yngx"]
[ext_resource type="Texture2D" uid="uid://dlkjucnn2wrdq" path="res://level_designer/widgets/draggable_button/pressed.png" id="2_g5w00"]
[ext_resource type="Texture2D" uid="uid://ces2dcjtixuyg" path="res://level_designer/widgets/draggable_button/hover.png" id="3_onq1d"]
[ext_resource type="Texture2D" uid="uid://cut8gjl1ok1nf" path="res://level_designer/widgets/draggable_button/hover_red.png" id="6_bohpw"]
[ext_resource type="Texture2D" uid="uid://btke6yfqyplyg" path="res://level_designer/widgets/draggable_button/normal_red.png" id="7_ynhlh"]
[ext_resource type="Texture2D" uid="uid://c4ac7ae1pnkkj" path="res://level_designer/widgets/draggable_button/pressed_red.png" id="8_jhsw2"]
[ext_resource type="Texture2D" uid="uid://cwvnysjvjmmla" path="res://level_designer/widgets/draggable_button/axis_lock_x.png" id="9_jew42"]
[ext_resource type="Texture2D" uid="uid://ceo1xm64g7pe0" path="res://level_designer/widgets/draggable_button/axis_lock_y.png" id="10_rbsdj"]

[sub_resource type="Resource" id="Resource_j2nsu"]
script = ExtResource("2_0yngx")
normal_graphic = ExtResource("1_vae0d")
hover_graphic = ExtResource("3_onq1d")
pressed_graphic = ExtResource("2_g5w00")
metadata/_custom_type_script = "uid://c0gisqkikjjsm"

[sub_resource type="Resource" id="Resource_re7ps"]
script = ExtResource("2_0yngx")
normal_graphic = ExtResource("7_ynhlh")
hover_graphic = ExtResource("6_bohpw")
pressed_graphic = ExtResource("8_jhsw2")
metadata/_custom_type_script = "uid://c0gisqkikjjsm"

[node name="WidgetButton" type="Control" node_paths=PackedStringArray("button", "x_lock", "y_lock")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wk6ee")
button = NodePath("Button")
x_lock = NodePath("LockX")
y_lock = NodePath("LockY")
common_costume_data = SubResource("Resource_j2nsu")
red_costume_data = SubResource("Resource_re7ps")

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
pivot_offset = Vector2(5, 5)
focus_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource("1_vae0d")
texture_pressed = ExtResource("2_g5w00")
texture_hover = ExtResource("3_onq1d")
metadata/_edit_use_anchors_ = true

[node name="LockX" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -23.0
offset_top = -1.0
offset_right = 23.0
offset_bottom = 1.0
texture = ExtResource("9_jew42")

[node name="LockY" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -23.0
offset_right = 1.0
offset_bottom = 23.0
texture = ExtResource("10_rbsdj")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
